force-app/main/default/objects/Rejection_Defect__c/Rejection_Defect__c.object-meta.xml
<CustomObject>
    <description>Junction object between Rejections and Defects.</description>
    <label>Rejection Defect</label>
    <nameField>
        <displayFormat>RJD-{0000000}</displayFormat>
        <label>Rejection Defect Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rejection Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>