force-app/main/default/objects/Rejection_Defect__c/fields/Location_of_Defect__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Defect__c</fullName>
    <formula>TEXT( Defect__r.Section__c )+
IF(NOT(ISBLANK(TEXT(Defect__r.Sub_Section__c))),&quot;-&quot;, &quot;&quot; )+
TEXT(Defect__r.Sub_Section__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location of Defect</label>
    <type>Text</type>
</CustomField>