force-app/main/default/objects/Rejection_Defect__c/fields/VIPAgentAuthorization__c.field-meta.xml
<CustomField>
    <fullName>VIPAgentAuthorization__c</fullName>
    <description>Used in the VIP Form Tool</description>
    <formula>IF(RecordType.Name = &quot;Agent Authorization&quot;, true, false)</formula>
    <label>VIP Agent Authorization</label>
    <type>Checkbox</type>
</CustomField>