force-app/main/default/objects/Rejection_Defect__c/fields/VIPCompanyAddressInformation__c.field-meta.xml
<CustomField>
    <fullName>VIPCompanyAddressInformation__c</fullName>
    <formula>IF(RecordType.Name = &quot;Company Address Information&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Company Address Information</label>
    <type>Checkbox</type>
</CustomField>