force-app/main/default/objects/Rejection_Defect__c/fields/VIPCompanyContact__c.field-meta.xml
<CustomField>
    <fullName>VIPCompanyContact__c</fullName>
    <formula>IF(RecordType.Name = &quot;Company Contact&quot;, true, false)</formula>
    <label>VIP Company Contact</label>
    <type>Checkbox</type>
</CustomField>