force-app/main/default/objects/Rejection_Defect__c/fields/VIPCompanyFinances__c.field-meta.xml
<CustomField>
    <fullName>VIPCompanyFinances__c</fullName>
    <formula>IF(RecordType.Name = &quot;Company Finances&quot;, true, false)</formula>
    <label>VIP Company Finances</label>
    <type>Checkbox</type>
</CustomField>