force-app/main/default/objects/Rejection_Defect__c/fields/VIPCompanyInformation__c.field-meta.xml
<CustomField>
    <fullName>VIPCompanyInformation__c</fullName>
    <formula>IF(RecordType.Name = &quot;Company Information&quot;, true, false)</formula>
    <label>VIP Company Information</label>
    <type>Checkbox</type>
</CustomField>