force-app/main/default/objects/Rejection_Defect__c/fields/VIPCompanyPeople__c.field-meta.xml
<CustomField>
    <fullName>VIPCompanyPeople__c</fullName>
    <formula>IF(RecordType.Name = &quot;Company People&quot;, true, false)</formula>
    <label>VIP Company People</label>
    <type>Checkbox</type>
</CustomField>