force-app/main/default/objects/Rejection_Defect__c/fields/VIPCompanyType__c.field-meta.xml
<CustomField>
    <fullName>VIPCompanyType__c</fullName>
    <formula>IF(RecordType.Name = &quot;Company Type&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Company Type</label>
    <type>Checkbox</type>
</CustomField>