force-app/main/default/objects/Rejection_Defect__c/fields/VIPDisclaimer__c.field-meta.xml
<CustomField>
    <fullName>VIPDisclaimer__c</fullName>
    <formula>IF(RecordType.Name = &quot;Disclaimer&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Disclaimer</label>
    <type>Checkbox</type>
</CustomField>