force-app/main/default/objects/Rejection_Defect__c/fields/VIPEducation__c.field-meta.xml
<CustomField>
    <fullName>VIPEducation__c</fullName>
    <formula>IF(RecordType.Name = &quot;Education&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Education</label>
    <type>Checkbox</type>
</CustomField>