force-app/main/default/objects/Rejection_Defect__c/fields/VIPFees__c.field-meta.xml
<CustomField>
    <fullName>VIPFees__c</fullName>
    <formula>IF(RecordType.Name = &quot;Fees&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Fees</label>
    <type>Checkbox</type>
</CustomField>