force-app/main/default/objects/Rejection_Defect__c/fields/VIPFollowupQuestions__c.field-meta.xml
<CustomField>
    <fullName>VIPFollowupQuestions__c</fullName>
    <formula>IF(RecordType.Name = &quot;Follow up Questions&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Follow up Questions</label>
    <type>Checkbox</type>
</CustomField>