force-app/main/default/objects/Rejection_Defect__c/fields/VIPLiveScan__c.field-meta.xml
<CustomField>
    <fullName>VIPLiveScan__c</fullName>
    <formula>IF(RecordType.Name = &quot;Live Scan&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Live Scan</label>
    <type>Checkbox</type>
</CustomField>