force-app/main/default/objects/Rejection_Defect__c/fields/VIPLocationDocumentation__c.field-meta.xml
<CustomField>
    <fullName>VIPLocationDocumentation__c</fullName>
    <formula>IF(RecordType.Name = &quot;Location Documentation&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Location Documentation</label>
    <type>Checkbox</type>
</CustomField>