force-app/main/default/objects/Rejection_Defect__c/fields/VIPMinorInformation__c.field-meta.xml
<CustomField>
    <fullName>VIPMinorInformation__c</fullName>
    <formula>IF(RecordType.Name = &quot;Minor Information&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Minor Information</label>
    <type>Checkbox</type>
</CustomField>