force-app/main/default/objects/Rejection_Defect__c/fields/VIPQuestionnaire__c.field-meta.xml
<CustomField>
    <fullName>VIPQuestionnaire__c</fullName>
    <formula>IF(RecordType.Name = &quot;Questionnaire&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Questionnaire</label>
    <type>Checkbox</type>
</CustomField>