force-app/main/default/objects/Rejection_Defect__c/fields/VIPRegistrationDuration__c.field-meta.xml
<CustomField>
    <fullName>VIPRegistrationDuration__c</fullName>
    <formula>IF(RecordType.Name = &quot;Registration Duration&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Registration Duration</label>
    <type>Checkbox</type>
</CustomField>