force-app/main/default/objects/Rejection_Defect__c/fields/VIPTest__c.field-meta.xml
<CustomField>
    <fullName>VIPTest__c</fullName>
    <formula>IF(RecordType.Name = &quot;Test&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Test</label>
    <type>Checkbox</type>
</CustomField>