force-app/main/default/objects/Rejection_Defect__c/fields/VIPWCIDocumentation__c.field-meta.xml
<CustomField>
    <fullName>VIPWCIDocumentation__c</fullName>
    <formula>IF(RecordType.Name = &quot;WCI Documentation&quot;,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP WCI Documentation</label>
    <type>Checkbox</type>
</CustomField>