force-app/main/default/objects/Rejection_Defect__c/recordTypes/Company_Address_Information.recordType-meta.xml
<RecordType>
    <fullName>Company_Address_Information</fullName>
    <active>true</active>
    <label>Company Address Information</label>
</RecordType>