force-app/main/default/objects/Rejection_Defect__c/recordTypes/Company_Finances.recordType-meta.xml
<RecordType>
    <fullName>Company_Finances</fullName>
    <active>true</active>
    <label>Company Finances</label>
</RecordType>