force-app/main/default/objects/Rejection_Defect__c/recordTypes/Company_Managers.recordType-meta.xml
<RecordType>
    <fullName>Company_Managers</fullName>
    <active>true</active>
    <description>defects related to managers</description>
    <label>Company Managers</label>
</RecordType>