force-app/main/default/objects/Rejection_Defect__c/recordTypes/Company_Owners.recordType-meta.xml
<RecordType>
    <fullName>Company_Owners</fullName>
    <active>true</active>
    <description>defects created related to owners</description>
    <label>Company Owners</label>
</RecordType>