force-app/main/default/objects/Rejection_Defect__c/recordTypes/Company_People.recordType-meta.xml
<RecordType>
    <fullName>Company_People</fullName>
    <active>true</active>
    <label>Company People</label>
</RecordType>