force-app/main/default/objects/Rejection_Defect__c/recordTypes/Live_Scan.recordType-meta.xml
<RecordType>
    <fullName>Live_Scan</fullName>
    <active>true</active>
    <label>Live Scan</label>
</RecordType>