force-app/main/default/objects/Rejection_Defect__c/recordTypes/Location_Documentation.recordType-meta.xml
<RecordType>
    <fullName>Location_Documentation</fullName>
    <active>true</active>
    <label>Location Documentation</label>
</RecordType>