force-app/main/default/objects/Rejection_Defect__c/recordTypes/Minor_Information.recordType-meta.xml
<RecordType>
    <fullName>Minor_Information</fullName>
    <active>true</active>
    <label>Minor Information</label>
</RecordType>