force-app/main/default/objects/Rejection_Defect__c/recordTypes/Parent_Guardian_Information.recordType-meta.xml
<RecordType>
    <fullName>Parent_Guardian_Information</fullName>
    <active>true</active>
    <label>Parent/Guardian Information</label>
</RecordType>