force-app/main/default/objects/Rejection_Defect__c/recordTypes/Permit_Applicant.recordType-meta.xml
<RecordType>
    <fullName>Permit_Applicant</fullName>
    <active>true</active>
    <label>Permit Applicant</label>
</RecordType>