force-app/main/default/objects/Rejection_Defect__c/recordTypes/Qualifying_Question.recordType-meta.xml
<RecordType>
    <fullName>Qualifying_Question</fullName>
    <active>true</active>
    <label>Qualifying Question</label>
</RecordType>